--- a/templates/rooms/show.html
+++ b/templates/rooms/show.html
@@ -47,7 +47,7 @@
                     </h1>
                     <div class="d-flex x-gap-5 items-center pt-5">
                         <i class="icon-location-2 text-16 text-light-1"></i>
-                        <div class="text-15 text-light-1">Kigali Rwanda</div>
+                        <div class="text-15 text-light-1">KK 35 Avenue, Kigali, Rwanda</div>
                     </div>
                 </div>
             </div>
@@ -107,6 +107,30 @@
                             {% endfor %}
                         </div>
                     </div>
+
+                    <div class="row x-gap-80 y-gap-40 pt-40">
+                        <div class="col-12">
+                            <h3 class="text-22 fw-500">Overview</h3>
+                            <p class="text-dark-1 text-15 mt-20">
+                                {{ room.description }}
+                            </p>
+                        </div>
+
+                        <div class="container mt-40 mb-40">
+                            <div class="border-top-light"></div>
+                        </div>
+
+                        <div class="col-12">
+                            <h5 class="text-16 fw-500">Amenities</h5>
+                            <ul class="list-disc text-15 mt-10" style="display: flex;">
+                                {% for amenity in room.amenities.all %}
+                                    <li class="ml-20">
+                                        {{ amenity.name }}
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="d-flex justify-end js-pin-content" data-offset="350">
@@ -159,5 +183,283 @@
             </div>
         </div>
     </section>
+
+    <section class="pt-40">
+        <div class="container">
+            <div class="row y-gap-20">
+                <div class="col-auto">
+                    <h2 class="text-22 fw-500">Location</h2>
+                </div>
+                <div class="col-12">
+                    <div class="map rounded-4 map-500">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.4162130891827!2d30.056825011912657!3d-1.988286936790796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca5be108f7aa5%3A0x2abacadc67af2926!2sB%26B%20MOUNTAIN%20VIEW!5e0!3m2!1sen!2srw!4v1727166050562!5m2!1sen!2srw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="pt-40">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="text-22 fw-500">Guest reviews</h3>
+                </div>
+            </div>
+    
+            <div class="row y-gap-30 items-center pt-20">
+                <div class="col-lg-3">
+                    <div class="flex-center rounded-4 min-h-250 bg-blue-1-05">
+                        <div class="text-center">
+                            <div class="text-60 md:text-50 fw-600 text-blue-1">4.8</div>
+                            <div class="fw-500 lh-1">Exceptional</div>
+                            <div class="text-14 text-light-1 lh-1 mt-5">3,014 reviews</div>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-lg-9">
+                    <div class="row y-gap-30">
+                        <div class="col-md-4 col-sm-6">
+                            <div class="">
+                                <div class="d-flex items-center justify-between">
+                                    <div class="text-15 fw-500">Location</div>
+                                    <div class="text-15 text-light-1">9.4</div>
+                                </div>
+    
+                                <div class="progressBar mt-10">
+                                    <div class="progressBar__bg bg-blue-2"></div>
+                                    <div class="progressBar__bar bg-dark-1" style="width: 90%"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="">
+                                <div class="d-flex items-center justify-between">
+                                    <div class="text-15 fw-500">Staff</div>
+                                    <div class="text-15 text-light-1">9.4</div>
+                                </div>
+    
+                                <div class="progressBar mt-10">
+                                    <div class="progressBar__bg bg-blue-2"></div>
+                                    <div class="progressBar__bar bg-dark-1" style="width: 90%"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="">
+                                <div class="d-flex items-center justify-between">
+                                    <div class="text-15 fw-500">Cleanliness</div>
+                                    <div class="text-15 text-light-1">9.4</div>
+                                </div>
+    
+                                <div class="progressBar mt-10">
+                                    <div class="progressBar__bg bg-blue-2"></div>
+                                    <div class="progressBar__bar bg-dark-1" style="width: 90%"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="">
+                                <div class="d-flex items-center justify-between">
+                                    <div class="text-15 fw-500">Value for money</div>
+                                    <div class="text-15 text-light-1">9.4</div>
+                                </div>
+    
+                                <div class="progressBar mt-10">
+                                    <div class="progressBar__bg bg-blue-2"></div>
+                                    <div class="progressBar__bar bg-dark-1" style="width: 90%"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="">
+                                <div class="d-flex items-center justify-between">
+                                    <div class="text-15 fw-500">Comfort</div>
+                                    <div class="text-15 text-light-1">9.4</div>
+                                </div>
+    
+                                <div class="progressBar mt-10">
+                                    <div class="progressBar__bg bg-blue-2"></div>
+                                    <div class="progressBar__bar bg-dark-1" style="width: 90%"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="">
+                                <div class="d-flex items-center justify-between">
+                                    <div class="text-15 fw-500">Facilities</div>
+                                    <div class="text-15 text-light-1">9.4</div>
+                                </div>
+    
+                                <div class="progressBar mt-10">
+                                    <div class="progressBar__bg bg-blue-2"></div>
+                                    <div class="progressBar__bar bg-dark-1" style="width: 90%"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <div class="">
+                                <div class="d-flex items-center justify-between">
+                                    <div class="text-15 fw-500">Free WiFi</div>
+                                    <div class="text-15 text-light-1">9.4</div>
+                                </div>
+    
+                                <div class="progressBar mt-10">
+                                    <div class="progressBar__bg bg-blue-2"></div>
+                                    <div class="progressBar__bar bg-dark-1" style="width: 90%"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container">
+        <div class="mt-40 border-top-light"></div>
+    </div>
+
+    <section class="pt-40">
+        <div class="container">
+            <div class="row y-gap-60">
+                <div class="col-lg-6">
+                    <div class="row x-gap-20 y-gap-20 items-center">
+                        <div class="col-auto">
+                            <img src="https://i.pinimg.com/736x/0d/64/98/0d64989794b1a4c9d89bff571d3d5842.jpg" alt="image" style="width: 60px;">
+                        </div>
+                        <div class="col-auto">
+                            <div class="fw-500 lh-15">Tonko</div>
+                            <div class="text-14 text-light-1 lh-15">March 2022</div>
+                        </div>
+                    </div>
+    
+                    <h5 class="fw-500 text-blue-1 mt-20">9.2 Superb</h5>
+                    <p class="text-15 text-dark-1 mt-10">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="container">
+        <div class="mt-40 border-top-light"></div>
+    </div>
+
+    <section class="pt-40">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-8 col-lg-10">
+                    <div class="row">
+                        <div class="col-auto">
+                            <h3 class="text-22 fw-500">Leave a Review</h3>
+                            <p class="text-15 text-dark-1 mt-5">Your email address will not be published.</p>
+                        </div>
+                    </div>
+                    <div class="row y-gap-30 pt-30">
+                        <div class="col-xl-4">
+                            <div class="text-15 lh-1 fw-500">Location</div>
+                            <div class="d-flex x-gap-5 items-center pt-10">
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="text-15 lh-1 fw-500">Staff</div>
+                            <div class="d-flex x-gap-5 items-center pt-10">
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="text-15 lh-1 fw-500">Cleanliness</div>
+                            <div class="d-flex x-gap-5 items-center pt-10">
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="text-15 lh-1 fw-500">Value For Money</div>
+                            <div class="d-flex x-gap-5 items-center pt-10">
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="text-15 lh-1 fw-500">Comfort</div>
+                            <div class="d-flex x-gap-5 items-center pt-10">
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="text-15 lh-1 fw-500">Facilities</div>
+                            <div class="d-flex x-gap-5 items-center pt-10">
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="text-15 lh-1 fw-500">Free WIFI</div>
+                            <div class="d-flex x-gap-5 items-center pt-10">
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                                <div class="icon-star text-10 text-yellow-1"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row y-gap-30 pt-20">
+                        <div class="col-xl-6">
+                            <div class="form-input ">
+                                <input type="text" required>
+                                <label class="lh-1 text-16 text-light-1">Text</label>
+                            </div>
+                        </div>
+                        <div class="col-xl-6">
+                            <div class="form-input ">
+                                <input type="text" required>
+                                <label class="lh-1 text-16 text-light-1">Email</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-input ">
+                                <textarea required rows="4"></textarea>
+                                <label class="lh-1 text-16 text-light-1">Write Your Comment</label>
+                            </div>
+                        </div>
+                        <div class="col-auto">
+                            <button href="#" class="button -md -dark-1 bg-blue-1 text-white">
+                                Post Review <div class="icon-arrow-top-right ml-15"></div>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="layout-pt-md"></div>
 
 {% endblock %}
