--- a/templates/rooms/show.html
+++ b/templates/rooms/show.html
@@ -358,103 +358,105 @@
                             <p class="text-15 text-dark-1 mt-5">Your email address will not be published.</p>
                         </div>
                     </div>
-                    <div class="row y-gap-30 pt-30">
-                        <div class="col-xl-4">
-                            <div class="text-15 lh-1 fw-500">Location</div>
-                            <div class="d-flex x-gap-5 items-center pt-10">
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
+                    <form method="post">
+                        <div class="row y-gap-30 pt-30">
+                            <div class="col-xl-4">
+                                <div class="text-15 lh-1 fw-500">Location</div>
+                                <div class="d-flex x-gap-5 items-center pt-10">
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="text-15 lh-1 fw-500">Staff</div>
+                                <div class="d-flex x-gap-5 items-center pt-10">
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="text-15 lh-1 fw-500">Cleanliness</div>
+                                <div class="d-flex x-gap-5 items-center pt-10">
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="text-15 lh-1 fw-500">Value For Money</div>
+                                <div class="d-flex x-gap-5 items-center pt-10">
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="text-15 lh-1 fw-500">Comfort</div>
+                                <div class="d-flex x-gap-5 items-center pt-10">
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="text-15 lh-1 fw-500">Facilities</div>
+                                <div class="d-flex x-gap-5 items-center pt-10">
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="text-15 lh-1 fw-500">Free WIFI</div>
+                                <div class="d-flex x-gap-5 items-center pt-10">
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                    <div class="icon-star text-10 text-yellow-1"></div>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-xl-4">
-                            <div class="text-15 lh-1 fw-500">Staff</div>
-                            <div class="d-flex x-gap-5 items-center pt-10">
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
+                        <div class="row y-gap-30 pt-20">
+                            <div class="col-xl-6">
+                                <div class="form-input ">
+                                    <input type="text" required>
+                                    <label class="lh-1 text-16 text-light-1">Text</label>
+                                </div>
+                            </div>
+                            <div class="col-xl-6">
+                                <div class="form-input ">
+                                    <input type="text" required>
+                                    <label class="lh-1 text-16 text-light-1">Email</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-input ">
+                                    <textarea required rows="4"></textarea>
+                                    <label class="lh-1 text-16 text-light-1">Write Your Comment</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <button href="#" class="button -md -dark-1 bg-blue-1 text-white">
+                                    Post Review <div class="icon-arrow-top-right ml-15"></div>
+                                </button>
                             </div>
                         </div>
-                        <div class="col-xl-4">
-                            <div class="text-15 lh-1 fw-500">Cleanliness</div>
-                            <div class="d-flex x-gap-5 items-center pt-10">
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="text-15 lh-1 fw-500">Value For Money</div>
-                            <div class="d-flex x-gap-5 items-center pt-10">
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="text-15 lh-1 fw-500">Comfort</div>
-                            <div class="d-flex x-gap-5 items-center pt-10">
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="text-15 lh-1 fw-500">Facilities</div>
-                            <div class="d-flex x-gap-5 items-center pt-10">
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="text-15 lh-1 fw-500">Free WIFI</div>
-                            <div class="d-flex x-gap-5 items-center pt-10">
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                                <div class="icon-star text-10 text-yellow-1"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row y-gap-30 pt-20">
-                        <div class="col-xl-6">
-                            <div class="form-input ">
-                                <input type="text" required>
-                                <label class="lh-1 text-16 text-light-1">Text</label>
-                            </div>
-                        </div>
-                        <div class="col-xl-6">
-                            <div class="form-input ">
-                                <input type="text" required>
-                                <label class="lh-1 text-16 text-light-1">Email</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-input ">
-                                <textarea required rows="4"></textarea>
-                                <label class="lh-1 text-16 text-light-1">Write Your Comment</label>
-                            </div>
-                        </div>
-                        <div class="col-auto">
-                            <button href="#" class="button -md -dark-1 bg-blue-1 text-white">
-                                Post Review <div class="icon-arrow-top-right ml-15"></div>
-                            </button>
-                        </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
